Updated the examples.

--- a/config/system.yaml
+++ b/config/system.yaml
@@ -5,7 +5,8 @@ home:
 
 pages:
   theme: bones
-  markdown_extra: false
+  markdown:
+    extra: true
   append_url_extension: '.html'
   process:
     markdown: true
