The examples now run as a standalone website. - The website uses the htmlqp library to load the examples with HTTP.

--- a/themes/habitat/habitat.yaml
+++ b/themes/habitat/habitat.yaml
@@ -1,6 +1,4 @@
 enabled: true
 site_title:
   enabled: true
-route: /examples
-php_dir: ${jaxon.website.exp}
-web_dir: ${jaxon.website.www}
+examples: /examples
