--- a/user/config/plugins/page-stats.yaml
+++ b/user/config/plugins/page-stats.yaml
@@ -1,5 +1,5 @@
 enabled: true
-db: user/data/page-data.sqlite
+db: ../user/data/page-data.sqlite
 ignore_errors: true
 anonymize_ips: false
 log_admin: true
